Updates alignment and size issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -4910,11 +4910,10 @@ fieldset:disabled .btn {
 .card-img-top,
 .card-img-bottom {
   width: 100%;
-  height: 19vw;
   object-fit: cover;
 }
 
-.card-img,
+.-img,
 .card-img-top {
   border-top-left-radius: calc(0.25rem - 1px);
   border-top-right-radius: calc(0.25rem - 1px);
